--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-debugbar": "^2.3",
-        "zircote/swagger-php": "^2.0"
+        "zircote/swagger-php": "^2.0",
+        "pion/laravel-chunk-upload": "^0.3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
