--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 /node_modules
 /public/storage
+/public/css
+/public/js
 /vendor
 /.idea
 Homestead.json
 Homestead.yaml
 .env
 *.log
+
+/storage/oauth-private.key
+/storage/oauth-public.key
