--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-debugbar": "^2.3",
         "zircote/swagger-php": "^2.0",
-        "pion/laravel-chunk-upload": "^0.3.1"
+        "pion/laravel-chunk-upload": "^0.3.1",
+        "laravel/passport": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
